--- a/src/shortcut/util.styl
+++ b/src/shortcut/util.styl
@@ -8,6 +8,14 @@
 		float: right;
 	}
 
+	$cursor_value = auto,default,pointer,wait,text,move,help,not-allowed,none,context-menu,progress,cell,crosshair,vertical-text,alias,copy,no-drop,grab,grabbing,all-scroll,col-resize,row-resize,n-resize,e-resize,s-resize,w-resize,ne-resize,nw-resize,se-resize,sw-resize,ew-resize,ns-resize,nesw-resize,nwse-resize,zoom-in,zoom-out;
+
+	for $cur, $idx in $cursor_value {
+		&curs-{$cur} {
+			cursor: $cur;
+		}
+	}
+
 	&clearfix {
 		&:before, &:after {
 			display: table;
@@ -122,5 +130,4 @@
 			border-radius: $value;
 		}
 	}
-	
 }
