--- a/docs/stylus/doc.styl
+++ b/docs/stylus/doc.styl
@@ -12,7 +12,7 @@
 		l-wh: 100px 100px;
 		color: yoz_color.sub_text;
 		text-align: center;
-		transition: all .1s ease-out;
+		// transition: all .1s ease-out;
 	}
 
 	&:before {
