--- a/src/variable.styl
+++ b/src/variable.styl
@@ -1,7 +1,15 @@
+
+ $yoz_status ?= {
+	'': '',
+	"h\:": ':hover',
+	// "f\:":':focus '
+};
+
 /**
  * 样式生成前缀，默认不添加前缀
  * 巧合下有冲突情况下，可为内置的样式规则增加前缀
  */
+
 yoz_prefix ?= '';
 /**
  * 常用颜色
